# ase

./: .gitignore  CMakeLists.txt  LICENSE  TODO.md
doc/: Doxyfile.in  evers.bib
include/constants/: constants.hpp
include/convexoptimization/: cvxopt.hpp
include/linearalgebra/: linalg.hpp
include/utility/: util.hpp  util.tpp
scripts/: CMakeListsDefault.txt  DoxyfileDefault.in  latex_config.sh  rm_latex_config.sh  setup_cpp_proj.sh
scripts/cmake/: CMakeListsDefault.txt
scripts/cmake/Modules/: FindMKL.cmake
scripts/doxygen/: DoxyfileDefault.in
src/convexoptimization/: cvxopt.cpp
src/linearalgebra/: linalg.cpp
test/convexoptimization/: testBacktrackingLineSearch.cpp  testDualSDPInequalityFormDiagPlusLowRank.cpp  testGeneralBarrierMethod.cpp  testGeneralDescentMethod.cpp  testSDPInequalityFormDiagPlusLowRank.cpp
test/linearalgebra/: testDeterminant.cpp  testDiagMatrixProduct.cpp  testDiagPlusLowRank.cpp
test/utility/: testComplexRealImaginaryVector.cpp
